syntax = "proto3";

package lessonmgmt.v1;


option go_package = "github.com/manabie-com/backend/pkg/manabuf/lessonmgmt/v1;lpb";

message ImportZoomAccountRequest {
  bytes payload = 1;
}

message ImportZoomAccountResponse {
  message ImportZoomAccountError {
    int32 row_number = 1;
    string error = 2;
  }
  repeated ImportZoomAccountError errors = 1;
}

message ExportZoomAccountRequest {}

message ExportZoomAccountResponse {
  bytes data = 1;
}

service ZoomAccountService {
  rpc ImportZoomAccount(ImportZoomAccountRequest) returns (ImportZoomAccountResponse);
  rpc ExportZoomAccount(ExportZoomAccountRequest) returns (ExportZoomAccountResponse);
}
